fix review visibility for approved followers

--- a/app/assets/stylesheets/sections/tranzito_utils.css
+++ b/app/assets/stylesheets/sections/tranzito_utils.css
@@ -31,15 +31,14 @@
 
 */
 .pagination-container .page-item {
-  @apply inline-flex text-bodytext leading-5 items-center border border-gray-500 bg-gray-100 cursor-pointer rounded-lg py-1 px-3 justify-center disabled:bg-gray-200 disabled:hover:bg-gray-200 disabled:cursor-not-allowed;
-
-  &:hover, &.active, &:active {
-    @apply bg-gray-200 border-gray-600
-  }
+  @apply inline-flex text-bodytext leading-5 items-center justify-center;
 }
 
 .pagination-container .page-item a {
-  color: inherit;
+  @apply py-1 px-3 no-underline border border-gray-500 bg-gray-100 rounded-lg disabled:bg-gray-200 disabled:hover:bg-gray-200 disabled:cursor-not-allowed;
+}
+.pagination-container .page-item a:hover, .pagination-container .page-item.active a, .pagination-container .page-item a:active {
+    @apply bg-gray-200 border-gray-600;
 }
 
 .pagination-container .pagination-flex.justify-content-md-end {
